--- a/package-data/amd64/index.html
+++ b/package-data/amd64/index.html
@@ -10,16 +10,7 @@
         <ul>
             <li><a href="..">../</a></li>
 
-          <li><a href="amd64">amd64/</a></li>
-          <li><a href="gpg.asc">gpg.asc</a></li>
-          <li><a href="incremental-updating-packages.sh">incremental-updating-packages.sh</a></li>
-          <li><a href="InRelease">InRelease</a></li>
-          <li><a href="LICENSE">LICENSE</a></li>
-          <li><a href="loaddeb.py">loaddeb.py</a></li>
-          <li><a href="package-data">package-data/</a></li>
-          <li><a href="Packages">Packages</a></li>
-          <li><a href="Release">Release</a></li>
-          <li><a href="Release.gpg">Release.gpg</a></li>     </ul>
+          <li><a href="5.6.2.2">5.6.2.2/</a></li>     </ul>
         <hr/>
         <h3>更新时间：2023年07月02日 21:20:59</h3>
         <hr/>
