--- a/amd64/index.html
+++ b/amd64/index.html
@@ -10,9 +10,10 @@
         <ul>
             <li><a href="..">../</a></li>
 
-          <li><a href="5.6.2.2">5.6.2.2/</a></li>     </ul>
+          <li><a href="5.6.2.2">5.6.2.2/</a></li>
+          <li><a href="5.6.4">5.6.4/</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 21:20:59</h3>
+        <h3>更新时间：2023年07月02日 21:27:30</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
