开始新增架构

--- a/package-data/index.html
+++ b/package-data/index.html
@@ -10,9 +10,11 @@
         <ul>
             <li><a href="..">../</a></li>
 
-          <li><a href="amd64">amd64/</a></li>     </ul>
+          <li><a href="amd64">amd64/</a></li>
+          <li><a href="i386">i386/</a></li>
+          <li><a href="mipsel">mipsel/</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 21:27:30</h3>
+        <h3>更新时间：2023年07月02日 21:46:54</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
