--- a/package-data/mipsel/5.6.4/index.html
+++ b/package-data/mipsel/5.6.4/index.html
@@ -10,18 +10,8 @@
         <ul>
             <li><a href="..">../</a></li>
 
-          <li><a href="amd64">amd64/</a></li>
-          <li><a href="gpg.asc">gpg.asc</a></li>
-          <li><a href="i386">i386/</a></li>
-          <li><a href="incremental-updating-packages.sh">incremental-updating-packages.sh</a></li>
-          <li><a href="InRelease">InRelease</a></li>
-          <li><a href="LICENSE">LICENSE</a></li>
-          <li><a href="loaddeb.py">loaddeb.py</a></li>
-          <li><a href="mipsel">mipsel/</a></li>
-          <li><a href="package-data">package-data/</a></li>
-          <li><a href="Packages">Packages</a></li>
-          <li><a href="Release">Release</a></li>
-          <li><a href="Release.gpg">Release.gpg</a></li>     </ul>
+          <li><a href="libdtkcommon-dev_5.6.4-1_mipsel.deb.package">libdtkcommon-dev_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkcommon_5.6.4-1_mipsel.deb.package">libdtkcommon_5.6.4-1_mipsel.deb.package</a></li>     </ul>
         <hr/>
         <h3>更新时间：2023年07月02日 21:46:54</h3>
         <hr/>
