--- a/package-data/i386/5.6.4/index.html
+++ b/package-data/i386/5.6.4/index.html
@@ -11,9 +11,21 @@
             <li><a href="..">../</a></li>
 
           <li><a href="libdtkcommon-dev_5.6.4-1_i386.deb.package">libdtkcommon-dev_5.6.4-1_i386.deb.package</a></li>
-          <li><a href="libdtkcommon_5.6.4-1_i386.deb.package">libdtkcommon_5.6.4-1_i386.deb.package</a></li>     </ul>
+          <li><a href="libdtkcommon_5.6.4-1_i386.deb.package">libdtkcommon_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore-dev_5.6.4-1_i386.deb.package">libdtkcore-dev_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore-doc_5.6.4-1_i386.deb.package">libdtkcore-doc_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore5-bin-dbgsym_5.6.4-1_i386.deb.package">libdtkcore5-bin-dbgsym_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore5-bin_5.6.4-1_i386.deb.package">libdtkcore5-bin_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore5-dbgsym_5.6.4-1_i386.deb.package">libdtkcore5-dbgsym_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkcore5_5.6.4-1_i386.deb.package">libdtkcore5_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui-dev_5.6.4-1_i386.deb.package">libdtkgui-dev_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui-doc_5.6.4-1_i386.deb.package">libdtkgui-doc_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui5-bin-dbgsym_5.6.4-1_i386.deb.package">libdtkgui5-bin-dbgsym_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui5-bin_5.6.4-1_i386.deb.package">libdtkgui5-bin_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui5-dbgsym_5.6.4-1_i386.deb.package">libdtkgui5-dbgsym_5.6.4-1_i386.deb.package</a></li>
+          <li><a href="libdtkgui5_5.6.4-1_i386.deb.package">libdtkgui5_5.6.4-1_i386.deb.package</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 21:46:54</h3>
+        <h3>更新时间：2023年07月02日 22:04:28</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
