--- a/i386/5.6.4/index.html
+++ b/i386/5.6.4/index.html
@@ -10,6 +10,19 @@
         <ul>
             <li><a href="..">../</a></li>
 
+          <li><a href="dde-qt5integration-dbgsym_5.5.26-1_i386.deb">dde-qt5integration-dbgsym_5.5.26-1_i386.deb</a></li>
+          <li><a href="dde-qt5integration5-dbgsym_5.5.26-1_i386.deb">dde-qt5integration5-dbgsym_5.5.26-1_i386.deb</a></li>
+          <li><a href="dde-qt5integration5_5.5.26-1_i386.deb">dde-qt5integration5_5.5.26-1_i386.deb</a></li>
+          <li><a href="dde-qt5integration_5.5.26-1_i386.deb">dde-qt5integration_5.5.26-1_i386.deb</a></li>
+          <li><a href="dtkwidget-doc_5.6.4-1_i386.deb">dtkwidget-doc_5.6.4-1_i386.deb</a></li>
+          <li><a href="dtkwidget5-examples-dbgsym_5.6.4-1_i386.deb">dtkwidget5-examples-dbgsym_5.6.4-1_i386.deb</a></li>
+          <li><a href="dtkwidget5-examples_5.6.4-1_i386.deb">dtkwidget5-examples_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdde-waylandclient-dbgsym_1.0.0-1+rb2_i386.deb">libdde-waylandclient-dbgsym_1.0.0-1+rb2_i386.deb</a></li>
+          <li><a href="libdde-waylandclient-dev_1.0.0-1+rb2_i386.deb">libdde-waylandclient-dev_1.0.0-1+rb2_i386.deb</a></li>
+          <li><a href="libdde-waylandclient_1.0.0-1+rb2_i386.deb">libdde-waylandclient_1.0.0-1+rb2_i386.deb</a></li>
+          <li><a href="libdde-waylandserver-dbgsym_1.0.0-1+rb2_i386.deb">libdde-waylandserver-dbgsym_1.0.0-1+rb2_i386.deb</a></li>
+          <li><a href="libdde-waylandserver-dev_1.0.0-1+rb2_i386.deb">libdde-waylandserver-dev_1.0.0-1+rb2_i386.deb</a></li>
+          <li><a href="libdde-waylandserver_1.0.0-1+rb2_i386.deb">libdde-waylandserver_1.0.0-1+rb2_i386.deb</a></li>
           <li><a href="libdtkcommon-dev_5.6.4-1_i386.deb">libdtkcommon-dev_5.6.4-1_i386.deb</a></li>
           <li><a href="libdtkcommon_5.6.4-1_i386.deb">libdtkcommon_5.6.4-1_i386.deb</a></li>
           <li><a href="libdtkcore-dev_5.6.4-1_i386.deb">libdtkcore-dev_5.6.4-1_i386.deb</a></li>
@@ -23,9 +36,14 @@
           <li><a href="libdtkgui5-bin-dbgsym_5.6.4-1_i386.deb">libdtkgui5-bin-dbgsym_5.6.4-1_i386.deb</a></li>
           <li><a href="libdtkgui5-bin_5.6.4-1_i386.deb">libdtkgui5-bin_5.6.4-1_i386.deb</a></li>
           <li><a href="libdtkgui5-dbgsym_5.6.4-1_i386.deb">libdtkgui5-dbgsym_5.6.4-1_i386.deb</a></li>
-          <li><a href="libdtkgui5_5.6.4-1_i386.deb">libdtkgui5_5.6.4-1_i386.deb</a></li>     </ul>
+          <li><a href="libdtkgui5_5.6.4-1_i386.deb">libdtkgui5_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdtkwidget-dev_5.6.4-1_i386.deb">libdtkwidget-dev_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdtkwidget5-bin-dbgsym_5.6.4-1_i386.deb">libdtkwidget5-bin-dbgsym_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdtkwidget5-bin_5.6.4-1_i386.deb">libdtkwidget5-bin_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdtkwidget5-dbgsym_5.6.4-1_i386.deb">libdtkwidget5-dbgsym_5.6.4-1_i386.deb</a></li>
+          <li><a href="libdtkwidget5_5.6.4-1_i386.deb">libdtkwidget5_5.6.4-1_i386.deb</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 22:04:28</h3>
+        <h3>更新时间：2023年07月02日 22:17:22</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
