--- a/package-data/mipsel/5.6.4/index.html
+++ b/package-data/mipsel/5.6.4/index.html
@@ -17,9 +17,15 @@
           <li><a href="libdtkcore5-bin-dbgsym_5.6.4-1_mipsel.deb.package">libdtkcore5-bin-dbgsym_5.6.4-1_mipsel.deb.package</a></li>
           <li><a href="libdtkcore5-bin_5.6.4-1_mipsel.deb.package">libdtkcore5-bin_5.6.4-1_mipsel.deb.package</a></li>
           <li><a href="libdtkcore5-dbgsym_5.6.4-1_mipsel.deb.package">libdtkcore5-dbgsym_5.6.4-1_mipsel.deb.package</a></li>
-          <li><a href="libdtkcore5_5.6.4-1_mipsel.deb.package">libdtkcore5_5.6.4-1_mipsel.deb.package</a></li>     </ul>
+          <li><a href="libdtkcore5_5.6.4-1_mipsel.deb.package">libdtkcore5_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui-dev_5.6.4-1_mipsel.deb.package">libdtkgui-dev_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui-doc_5.6.4-1_mipsel.deb.package">libdtkgui-doc_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui5-bin-dbgsym_5.6.4-1_mipsel.deb.package">libdtkgui5-bin-dbgsym_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui5-bin_5.6.4-1_mipsel.deb.package">libdtkgui5-bin_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui5-dbgsym_5.6.4-1_mipsel.deb.package">libdtkgui5-dbgsym_5.6.4-1_mipsel.deb.package</a></li>
+          <li><a href="libdtkgui5_5.6.4-1_mipsel.deb.package">libdtkgui5_5.6.4-1_mipsel.deb.package</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 22:17:22</h3>
+        <h3>更新时间：2023年07月02日 22:43:17</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
