--- a/package-data/amd64/index.html
+++ b/package-data/amd64/index.html
@@ -10,10 +10,11 @@
         <ul>
             <li><a href="..">../</a></li>
 
+          <li><a href="5.4.20">5.4.20/</a></li>
           <li><a href="5.6.2.2">5.6.2.2/</a></li>
           <li><a href="5.6.4">5.6.4/</a></li>     </ul>
         <hr/>
-        <h3>更新时间：2023年07月02日 22:43:17</h3>
+        <h3>更新时间：2023年07月03日 21:34:12</h3>
         <hr/>
         <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
